# cpp_project_guideline

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  gcovr.cfg  pixi.toml
.github/workflows/: build.yml
doc/: Doxyfile.in  footer.tex  header.tex
include/: add.hpp
samples/: CMakeLists.txt  base.cpp
scripts/: base.sh  build.sh  env_setup.sh  perf_flamegraph.sh  run-clang-format.py
src/: add.cpp
test/: CMakeLists.txt  add_test.cpp
